fix(search): 🐛 align typeahead with input

--- a/resources/skins.citizen.search/skins.citizen.search.less
+++ b/resources/skins.citizen.search/skins.citizen.search.less
@@ -6,8 +6,7 @@
 	overflow: auto;
 	width: 100%;
 	max-height: ~'calc( var( --header-card-maxheight ) - var( --height-search-bar ) )';
-	box-sizing: border-box;
-	margin: 0; // Reset <ol> styles
+	margin: 0 0 0 -1px; // Reset <ol> styles, fix alignment
 	border-bottom-left-radius: var( --border-radius--medium );
 	border-bottom-right-radius: var( --border-radius--medium );
 	overscroll-behavior: contain;
